# AgentFly

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pages.yml
agentfly/: __init__.py  agents.py  benchmark.py  cli.py  constraint_eval.py  deepseek.py  deepseek_benchmark.py  domain.py  environment.py  events.py  graph.py  metrics.py  runtime.py  semantic_experiment.py  tools.py
demos/: app.js  index.html  player.mjs  styles.css
demos/data/: agriculture_story.json  research_results.json
demos/tests/: player.test.mjs
tests/: test_agents.py  test_cli.py  test_constraint_eval.py  test_deepseek.py  test_deepseek_benchmark.py  test_demo_data.py  test_evaluation.py  test_graph.py  test_runtime.py  test_semantic_experiment.py
