[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfly"
version = "0.1.0"
description = "Deterministic research MVP for agentic UAV mission planning"
requires-python = ">=3.9"

[project.scripts]
agentfly = "agentfly.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
